##Text encoding: utf-8

2011-05-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/Makefile.am: add -lX11 to LIBADD.
	* libs/gcugtk/glview.cc: make GL rendering work on screen.
	* libs/gcugtk/glview.h: ditto.
	* programs/3d/application.cc: sanitize gcu namespace use.
	* programs/3d/application.h: ditto.
	* programs/3d/main.cc: ditto.
	* programs/3d/window.cc: ditto.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/atom.cc: ditto.
	* programs/crystal/atom.h: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/prefs.h: ditto.
	* programs/crystal/view.cc: ditto.
	* programs/crystal/view.h: ditto.

2011-05-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* gchemutils.schemas.in: removed offscreen option.
	* libs/gcugtk/glview.cc: statrt working on GLX direct calls.
	* libs/gcugtk/glview.h: ditto.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: removed offscreen option.

2011-05-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fontsel.cc: fixed size issue.
	* libs/gcr/gcrcrystalviewer.cc: ditto.
	* libs/gcu/chem3ddoc.cc: add a CreateView() method.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcu/glview.h: add virtual GL related methoods.
	* libs/gcugtk/Makefile.am: add new Chem3dDoc class.
	* libs/gcugtk/chem3ddoc.cc: ditto.
	* libs/gcugtk/chem3ddoc.h: ditto.
	* libs/gcugtk/gcuchem3dviewer.cc: fixed size issue.
	* libs/gcugtk/gcuspectrumviewer.cc: ditto.
	* libs/gcugtk/glview.cc: implement virtual GL related methoods.
	* libs/gcugtk/glview.h: ditto.
	* programs/3d/document.cc: derive from gcugtk::Chem3dDoc.
	* programs/3d/document.h: ditto.

2011-05-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/line-item.cc: add support for dashes.
	* libs/gccv/line-item.h: ditto.
	* libs/gccv/line.cc: ditto.
	* plugins/paint/selection/plugin.cc: generate the merge tool icon using
	the canvas.

2011-05-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: make m_Color a settable property.