@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2011-05-20  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcu/glview.cc: reimplement offscreen rendering.
+	* libs/gcu/glview.h:
+	* libs/gcugtk/glview.cc:
+
 2011-05-19  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcugtk/Makefile.am: add -lX11 to LIBADD.
 	* libs/gcugtk/glview.cc: make GL rendering work on screen.
